@@ -35,11 +35,7 @@ Depends: ${shlibs:Depends},
          libgles2-mesa [armel armhf] | libgles2 [armel armhf]
 Recommends: libcogl-common
 Suggests: libgles2-mesa | libgles2, libgl1-mesa-glx
-Breaks: libclutter-1.0-0 (<< 1.17),
-        libcogl9,
-        libcogl11,
-        libcogl12,
-        libcogl15
+Breaks: libclutter-1.0-0 (<< 1.17)
 Multi-Arch: same
 Description: Object oriented GL/GLES Abstraction/Utility Layer
  Cogl is a small open source library for using 3D graphics hardware to draw
